@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>us.freeandfair.production</groupId>
 	<artifactId>colorado_rla</artifactId>
-	<version>1.1.0</version>
+	<version>1.4.0-SNAPSHOT</version>
 	<name>ColoradoRLA</name>
 	<description>A risk-limiting audit system for the State of Colorado</description>
 	<properties>
@@ -75,7 +75,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>2.17</version>
+				<version>3.0.0</version>
 				<executions>
 					<execution>
 						<id>checkstyle</id>
@@ -84,9 +84,8 @@
 							<configLocation>${project.basedir}/project_configuration/freeandfair_checkstyle.xml</configLocation>
 							<suppressionsLocation>${project.basedir}/project_configuration/checkstyle_suppression.xml</suppressionsLocation>
 							<consoleOutput>true</consoleOutput>
-							<failOnViolation>true</failOnViolation>
 							<failsOnError>true</failsOnError>
-							<violationSeverity>warning</violationSeverity>
+							<violationSeverity>error</violationSeverity>
 							<linkXRef>false</linkXRef>
 						</configuration>
 						<goals>
@@ -95,6 +94,27 @@
 					</execution>
 				</executions>
 			</plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.6.0</version>
+        <configuration>
+          <executable>java</executable>
+          <arguments>
+            <argument>-Xms512m</argument>
+            <argument>-Xmx512m</argument>
+            <argument>-XX:NewRatio=3</argument>
+            <argument>-XX:+PrintGCTimeStamps</argument>
+            <argument>-XX:+PrintGCDetails</argument>
+            <argument>-Xloggc:gc.log</argument>
+            <argument>-classpath</argument>
+            <classpath/>
+            <argument>us.freeandfair.corla.Main</argument>
+          </arguments>
+        </configuration>
+      </plugin>
+
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>findbugs-maven-plugin</artifactId>
@@ -152,6 +172,11 @@
 			<artifactId>commons-csv</artifactId>
 			<version>1.4</version>
 		</dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.6</version>
+    </dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
@@ -208,5 +233,10 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.6</version>
 		</dependency>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.0</version>
+    </dependency>
 	</dependencies>
 </project>
